# biased_mace

./: MANIFEST.in  pyproject.toml  setup.cfg
biased_mace/calculators/: foundations_models.py  lammps_mace.py  mace.py
biased_mace/cli/: active_learning_md.py  convert_cueq_e3nn.py  convert_e3nn_cueq.py  convert_e3nn_oeq.py  convert_oeq_e3nn.py  create_lammps_model.py  eval_configs.py  fine_tuning_select.py  preprocess_data.py  run_train.py  select_head.py  visualise_train.py
biased_mace/data/: atomic_data.py  hdf5_dataset.py  lmdb_dataset.py  utils.py
biased_mace/modules/: __init__.py  blocks.py  extensions.py  field_blocks.py  global_readout.py  irreps_tools.py  loss.py  models.py  radial.py  symmetric_contraction.py  utils.py  wrapper_ops.py
biased_mace/tools/: cg_cueq_tools.py  distributed_tools.py  finetuning_utils.py  model_script_utils.py  multihead_tools.py  run_train_utils.py  scripts_utils.py  tables_utils.py  train.py
biased_mace/tools/fairchem_dataset/: lmdb_dataset_tools.py
mace/calculators/: mace.py
mace/cli/: run_train.py
mace/modules/: blocks.py  global_readout.py  models.py  utils.py
mace/tools/: arg_parser.py  finetuning_utils.py  model_script_utils.py  scripts_utils.py
scripts/: distributed_example.sbatch  eval_configs.py  preprocess_data.py  run_checks.sh  run_train.py
tests/: test_benchmark.py  test_calculator.py  test_cg.py  test_compile.py  test_cueq_oeq.py  test_data.py  test_embedding_train.py  test_finetuning_select.py  test_foundations.py  test_freeze.py  test_hessian.py  test_lmdb_database.py  test_lora.py  test_maceles.py  test_mliap_exchange.py  test_models.py  test_modules.py  test_multifiles.py  test_polar_cueq.py  test_polar_models.py  test_run_train.py  test_run_train_allkeys.py  test_run_train_dipole_polar.py  test_schedulefree.py  test_tools.py
tests/modules/: test_radial.py
