[metadata]
name = biased_mace
version = attr: biased_mace.__version__
short_description = BiasedMACE - Biased MACE machine learning interatomic potential which allows adding a bias potential.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ShaunHan/biased_mace
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.7
install_requires =
    torch>=1.12
    e3nn==0.4.4
    numpy
    opt_einsum
    ase
    torch-ema
    prettytable
    matscipy
    h5py
    torchmetrics
    python-hostlist
    configargparse
    GitPython
    pyYAML
    tqdm
    lmdb
    orjson
    # for plotting:
    matplotlib
    pandas

[options.entry_points]
console_scripts =
    mace_active_learning_md  =  biased_mace.cli.active_learning_md:main
    mace_create_lammps_model  =  biased_mace.cli.create_lammps_model:main
    mace_eval_configs  =  biased_mace.cli.eval_configs:main
    mace_plot_train  =  biased_mace.cli.plot_train:main
    mace_run_train  =  biased_mace.cli.run_train:main
    mace_prepare_data  =  biased_mace.cli.preprocess_data:main
    mace_finetuning_select = biased_mace.cli.fine_tuning_select:main
    mace_convert_device  =  biased_mace.cli.convert_device:main
    mace_select_head =  biased_mace.cli.select_head:main
    mace_e3nn_cueq = biased_mace.cli.convert_e3nn_cueq:main
    mace_cueq_to_e3nn = biased_mace.cli.convert_cueq_e3nn:main

[options.extras_require]
wandb = wandb
fpsample = fpsample
dev =
    black
    isort
    mypy
    pre-commit
    pytest
    pytest-benchmark
    pylint
schedulefree = schedulefree
cueq = cuequivariance-torch>=0.2.0
cueq-cuda-11 = cuequivariance-ops-torch-cu11>=0.2.0
cueq-cuda-12 = cuequivariance-ops-torch-cu12>=0.2.0
